aks/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-app
  labels:
    app: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: adoacr15121996.azurecr.io/shopcart:94
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5075
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 250Mi
