aks/checkout-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-app
  labels:
    app: checkout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - name: checkout
          image: adoacr15121996.azurecr.io/shopcheckout:91
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5015
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 500m
              memory: 350Mi
            requests:
              cpu: 100m
              memory: 300Mi
