aks/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: adoacr15121996.azurecr.io/shopfrontend:92
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5030
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 350Mi
            requests:
              cpu: 100m
              memory: 150Mi
