aks/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  labels:
    app: cart
spec:
  type: LoadBalancer
  ports:
    - port: 5075
      targetPort: 5075
      protocol: TCP
      name: http
  selector:
    app: cart
