aks/catalogue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue-service
  labels:
    app: catalogue
spec:
  type: ClusterIP
  ports:
    - port: 5050
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: catalogue
