aks/checkout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout-service
  labels:
    app: checkout
spec:
  type: ClusterIP
  ports:
    - port: 5015
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: checkout
