aks/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  type: ClusterIP
    ports:
    - port: 5030
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: frontend
