aks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - backend:
          service:
            name: redis-service
            port:
              number: 6379
        path: /redis
        pathType: Prefix
      - backend:
          service:
            name: cart-service
            port:
              number: 5075
        path: /cart
        pathType: Prefix
      - backend:
          service:
            name: frontend-service
            port:
              number: 5030
        path: /frontend
        pathType: Prefix
      - backend:
          service:
            name: catalogue-service
            port:
              number: 5050
        path: /catalogue
        pathType: Prefix
      - backend:
          service:
            name: checkout-sevice
            port:
              number: 5015
        path: /checkout
        pathType: Prefix
status:
  loadBalancer: {}
